--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.4.5",
     "express": "4.17.1",
+    "gravatar": "^1.8.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.6.3",
     "morgan": "1.10.0"
   },
