--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.17.1",
     "gravatar": "^1.8.2",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "morgan": "1.10.0"
   },
