--- a/.env.tamplates
+++ b/.env.tamplates
@@ -1,1 +1,1 @@
-DB_HOST=mongodb+srv://<user>:<password>@<cluster>.mongodb.net/db-kapusta
+DB_HOST=mongodb+srv://test@gmail.com:Testuser1@@cluster0.mongodb.net/db-kapusta
