--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "1.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
