--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api"
+    }
+  ],
   "routes": [
     {
       "src": "/api-docs/(.*)",
-      "dest": "/api-docs/index.html"
+      "dest": "/api-docs"
     }
   ]
 }
