--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "7.19.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "16.0.3",
