--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,14 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+  "version": 2,
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
+  "routes": [
+    {
+      "src": "/api-docs/(swagger-ui-bundle\\.js|swagger-ui-standalone-preset\\.js|swagger-ui\\.css)",
+      "dest": "https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.0/$1"
+    },
+    {
+      "src": "/api-docs",
+      "dest": "/api"
+    }
+  ]
+}
