--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
