--- a/.env.tamplates
+++ b/.env.tamplates
@@ -1,1 +1,3 @@
-DB_HOST=mongodb+srv://<user>:<password>@<cluster>.mongodb.net/db-kapusta
+MONGO_URI=mongodb+srv://<user>:<password>@<cluster>.mongodb.net/db-kapusta
+JWT_SECRET=h2347hh3247hjwesdf8734h87s8jh238hf
+PORT=3030
